@@ -848,6 +848,16 @@ specifier|public
 class|class
 name|CoreContainer
 block|{
+DECL|field|LEADER_VOTE_WAIT
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|LEADER_VOTE_WAIT
+init|=
+literal|"180000"
+decl_stmt|;
+comment|// 3 minutes
 DECL|field|DEFAULT_HOST_CONTEXT
 specifier|private
 specifier|static
@@ -2749,10 +2759,9 @@ name|get
 argument_list|(
 literal|"solr/cores/@leaderVoteWait"
 argument_list|,
-literal|"180000"
+name|LEADER_VOTE_WAIT
 argument_list|)
 expr_stmt|;
-comment|// 3 minutes
 if|if
 condition|(
 name|shareSchema
@@ -6638,6 +6647,19 @@ argument_list|,
 name|DEFAULT_HOST_CONTEXT
 argument_list|)
 expr_stmt|;
+name|addCoresAttrib
+argument_list|(
+name|coresAttribs
+argument_list|,
+literal|"leaderVoteWait"
+argument_list|,
+name|this
+operator|.
+name|leaderVoteWait
+argument_list|,
+name|LEADER_VOTE_WAIT
+argument_list|)
+expr_stmt|;
 name|List
 argument_list|<
 name|SolrCoreXMLDef
@@ -7033,6 +7055,11 @@ name|shard
 init|=
 literal|null
 decl_stmt|;
+name|String
+name|roles
+init|=
+literal|null
+decl_stmt|;
 if|if
 condition|(
 name|cd
@@ -7047,6 +7074,13 @@ operator|.
 name|getShardId
 argument_list|()
 expr_stmt|;
+name|roles
+operator|=
+name|cd
+operator|.
+name|getRoles
+argument_list|()
+expr_stmt|;
 block|}
 name|addCoreProperty
 argument_list|(
@@ -7057,6 +7091,19 @@ argument_list|,
 name|CORE_SHARD
 argument_list|,
 name|shard
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|addCoreProperty
+argument_list|(
+name|coreAttribs
+argument_list|,
+name|coreNode
+argument_list|,
+name|CORE_ROLES
+argument_list|,
+name|roles
 argument_list|,
 literal|null
 argument_list|)
